# ParaCL

./: CMakeLists.txt  LICENSE  README.md  driver.cpp  driver.hpp  ex1.txt  main.cpp
backend/inc/: executor.hpp  visitor.hpp
backend/src/: executor.cpp
examples/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
frontend/inc/: AST.hpp  INode.hpp  Node.hpp  driver.hpp  executor.hpp  types.hpp
frontend/src/: AST.cpp  Node.cpp
graphics/: graph.dot
parsing/: lexer.l  parser.y
